find-mba.com (archived on 2013-12-27)
{
  "alexa_rank": 84558,
  "analysis_subcorpus": true,
  "categories": "education",
  "char_count": 2080,
  "classifier_probability": 0.88,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "fairly_difficult",
  "flesch_kincaid": 10.57,
  "homepage_snapshot_redirected_domain": "find-mba.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20131015105806id_/http://www.find-mba.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20131015105806id_/http%3A//find-mba.com",
  "interval": "2013_B",
  "link_text": "Privacy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "find-mba.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20131227130136id_/http%3A//www.find-mba.com/privacy",
  "policy_title": "Privacy - FIND MBA",
  "policy_url": "find-mba.com/privacy",
  "sha1": "ae156a579cc9f276c083fc2d19f85eabf717f3f2",
  "simhash": 10023773665225578326,
  "simhash_updated": false,
  "site_hostname": "find-mba.com",
  "site_url": "http://find-mba.com",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20131227130136",
  "word_count": 371,
  "year": 2013
}

--- a/f/fi/fin/find-mba.com.html
+++ b/f/fi/fin/find-mba.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the find-mba.com privacy policy that was archived on 2013-06-30.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130630100009id_/http%3A//www.find-mba.com/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the find-mba.com privacy policy that was archived on 2013-12-27.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131227130136id_/http%3A//www.find-mba.com/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xmlns:fb="http://www.facebook.com/2008/fbml" xmlns:og="http://opengraphprotocol.org/schema/"><head>
 <script id="facebook-jssdk" src="//connect.facebook.net/en_GB/all.js#xfbml=1&amp;appId=286068244742268"></script><script id="twitter-wjs" src="http://platform.twitter.com/widgets.js"></script><script type="text/javascript" async="" src="https://ssl.luckyorange.com/w.js"></script><script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js" type="text/javascript"></script>
@@ -111,30 +111,30 @@ As our privacy policy will be updated regularly to reflect changes in legislatio
 <div class="fb-like-box" data-href="https://www.facebook.com/FindMBA" data-width="147" data-show-faces="false" data-stream="false" data-show-border="false" data-header="false"></div>
 </div>
 <h2>Featured Programs</h2>
-<a href="/university/1520/universidade-nova-de-lisboa-universidade-catlica-portuguesa-the-lisbon-mba-international"><img class="adimg" src="/pics/universities/mba/1520.gif" alt="Católica I Nova" title="Católica I Nova"></a><br>
-<strong><a href="/university/1520/universidade-nova-de-lisboa-universidade-catlica-portuguesa-the-lisbon-mba-international">Católica I Nova</a></strong><br>
-<a href="/university/1520/universidade-nova-de-lisboa-universidade-catlica-portuguesa-the-lisbon-mba-international">The Lisbon MBA International - A Collaboration with MIT</a>
-<hr> <a href="/university/1630/tiasnimbas-business-school-tilburg-campus"><img class="adimg" src="/pics/universities/mba/1630.gif" alt="TiasNimbas Business School - Tilburg Campus" title="TiasNimbas Business School - Tilburg Campus"></a><br>
-<strong><a href="/university/1630/tiasnimbas-business-school-tilburg-campus">TiasNimbas Business School - Tilburg Campus</a></strong><br>
-<a href="/university/1630/tiasnimbas-business-school-tilburg-campus">Full-time and part-time MBA programs</a>
-<hr> <a href="/university/1164/the-university-of-north-carolina-at-chapel-hill-unc-kenan-flagler-business-school"><img class="adimg" src="/pics/universities/mba/1164.gif" alt="UNC Kenan-Flagler Business School" title="UNC Kenan-Flagler Business School"></a><br>
-<strong><a href="/university/1164/the-university-of-north-carolina-at-chapel-hill-unc-kenan-flagler-business-school">UNC Kenan-Flagler Business School</a></strong><br>
-<a href="/university/1164/the-university-of-north-carolina-at-chapel-hill-unc-kenan-flagler-business-school">Earn a top-ranked MBA anywhere in the world</a>
-<hr> <a href="/university/2151/peking-university-beijing-international-mba-bimba"><img class="adimg" src="/pics/universities/mba/2151.gif" alt="BiMBA at Peking University" title="BiMBA at Peking University"></a><br>
-<strong><a href="/university/2151/peking-university-beijing-international-mba-bimba">BiMBA at Peking University</a></strong><br>
-<a href="/university/2151/peking-university-beijing-international-mba-bimba">Full-time &amp; Part-time MBA in Beijing, China</a>
+<a href="/university/269/boston-university-bu-school-of-management"><img class="adimg" src="/pics/universities/mba/269.gif" alt="Boston University School of Management" title="Boston University School of Management"></a><br>
+<strong><a href="/university/269/boston-university-bu-school-of-management">Boston University School of Management</a></strong><br>
+<a href="/university/269/boston-university-bu-school-of-management">Full-time, part-time &amp; dual-degree programs</a>
 <hr> <a href="/university/1731/hku-the-university-of-hong-kong"><img class="adimg" src="/pics/universities/mba/1731.gif" alt="HKU - The University of Hong Kong" title="HKU - The University of Hong Kong"></a><br>
 <strong><a href="/university/1731/hku-the-university-of-hong-kong">HKU - The University of Hong Kong</a></strong><br>
 <a href="/university/1731/hku-the-university-of-hong-kong">Full-Time, Part- Time and Executive MBA</a>
-<hr> <a href="/university/448/sda-bocconi-school-of-management"><img class="adimg" src="/pics/universities/mba/448.gif" alt="SDA Bocconi School of Management" title="SDA Bocconi School of Management"></a><br>
-<strong><a href="/university/448/sda-bocconi-school-of-management">SDA Bocconi School of Management</a></strong><br>
-<a href="/university/448/sda-bocconi-school-of-management">Full-time MBA &amp; Executive MBA programs in Milan</a>
-<hr> <a href="/university/269/boston-university-bu-school-of-management"><img class="adimg" src="/pics/universities/mba/269.gif" alt="Boston University School of Management" title="Boston University School of Management"></a><br>
-<strong><a href="/university/269/boston-university-bu-school-of-management">Boston University School of Management</a></strong><br>
-<a href="/university/269/boston-university-bu-school-of-management">Full-time, part-time &amp; dual-degree programs</a>
-<hr> <a href="/university/540/esmt-european-school-of-management-and-technology"><img class="adimg" src="/pics/universities/mba/540.gif" alt="ESMT" title="ESMT"></a><br>
-<strong><a href="/university/540/esmt-european-school-of-management-and-technology">ESMT</a></strong><br>
-<a href="/university/540/esmt-european-school-of-management-and-technology">The Global MBA Made in Germany. Full-Time &amp; Executive MBAs in Berlin</a>
+<hr> <a href="/university/1352/university-of-wisconsin-whitewater"><img class="adimg" src="/pics/universities/mba/1352.gif" alt="University of Wisconsin - Whitewater" title="University of Wisconsin - Whitewater"></a><br>
+<strong><a href="/university/1352/university-of-wisconsin-whitewater">University of Wisconsin - Whitewater</a></strong><br>
+<a href="/university/1352/university-of-wisconsin-whitewater">AACSB-accredited MBA programs</a>
+<hr> <a href="/university/1431/nottingham-university-business-school"><img class="adimg" src="/pics/universities/mba/1431.gif" alt="Nottingham University Business School" title="Nottingham University Business School"></a><br>
+<strong><a href="/university/1431/nottingham-university-business-school">Nottingham University Business School</a></strong><br>
+<a href="/university/1431/nottingham-university-business-school">Full-Time and Executive MBA with specialisations</a>
+<hr> <a href="/university/518/esade-business-school-barcelona-campus"><img class="adimg" src="/pics/universities/mba/518.gif" alt="ESADE Business School" title="ESADE Business School"></a><br>
+<strong><a href="/university/518/esade-business-school-barcelona-campus">ESADE Business School</a></strong><br>
+<a href="/university/518/esade-business-school-barcelona-campus">The ESADE MBA - top-ranked MBA program in Barcelona</a>
+<hr> <a href="/university/549/hochschule-bremen-international-graduate-center-igc"><img class="adimg" src="/pics/universities/mba/549.gif" alt="Hochschule Bremen - International Graduate Center (IGC)" title="Hochschule Bremen - International Graduate Center (IGC)"></a><br>
+<strong><a href="/university/549/hochschule-bremen-international-graduate-center-igc">Hochschule Bremen - International Graduate Center (IGC)</a></strong><br>
+<a href="/university/549/hochschule-bremen-international-graduate-center-igc">MBA in Germany</a>
+<hr> <a href="/university/533/hkust-hong-kong-university-of-science-and-technology-business-school"><img class="adimg" src="/pics/universities/mba/533.gif" alt="HKUST Business School" title="HKUST Business School"></a><br>
+<strong><a href="/university/533/hkust-hong-kong-university-of-science-and-technology-business-school">HKUST Business School</a></strong><br>
+<a href="/university/533/hkust-hong-kong-university-of-science-and-technology-business-school">Top-10 Financial Times-ranked MBA program in Hong Kong</a>
+<hr> <a href="/university/854/university-of-colorado-at-boulder-leeds-school-of-business"><img class="adimg" src="/pics/universities/mba/854.gif" alt="University of Colorado Boulder - Leeds" title="University of Colorado Boulder - Leeds"></a><br>
+<strong><a href="/university/854/university-of-colorado-at-boulder-leeds-school-of-business">University of Colorado Boulder - Leeds</a></strong><br>
+<a href="/university/854/university-of-colorado-at-boulder-leeds-school-of-business">Full-time and part-time MBA programs</a>
 </div>
 <br class="clear">
  
@@ -161,7 +161,7 @@ As our privacy policy will be updated regularly to reflect changes in legislatio
 </div>
 <a href="https://twitter.com/findmba" class="twitter-follow-button" data-width="80px" data-show-count="false">Follow @findmba</a>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="http://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
-<p class="small" style="clear:left">© 2001–2013 Pritzwalks · FIND MBA – Master of Business Administration (MBA) Programs Worldwide (0.037837982177734s)
+<p class="small" style="clear:left">© 2001–2013 Pritzwalks · FIND MBA – Master of Business Administration (MBA) Programs Worldwide (0.046411991119385s)
 </p></div>
 </div>
  
