--- a/p/po/poe/poemofquotes.com.html
+++ b/p/po/poe/poemofquotes.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the poemofquotes.com privacy policy that was archived on 2013-05-21.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130521193836id_/http%3A//www.poemofquotes.com/privacy-policy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the poemofquotes.com privacy policy that was archived on 2013-12-27.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131227133135id_/http%3A//www.poemofquotes.com/privacy-policy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html lang="en" prefix="og: http://ogp.me/ns#"><head>
 <title>Privacy Policy to PoemofQuotes.com</title><meta charset="UTF-8"><meta name="keywords" content=""><meta name="description" content="Read the Privacy Policy of Poem of Quotes dot com including information on logs, cookies and web beacons and more."><meta name="googlebot" content="noindex">
@@ -14,7 +14,7 @@
 <meta property="og:locale" content="en_US">
 <link rel="shortcut icon" href="/favicon.ico">
 <link rel="stylesheet" href="/css.php" media="screen" type="text/css">
-<link rel="canonical" href="http://www.poemofquotes.com/privacy-policy.php"><script src="/mainjs.php"></script>
+<link rel="canonical" href="http://www.poemofquotes.com/privacy-policy.php"><script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script src="/mainjs.php"></script>
 <!--[if IE]>
 <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 <![endif]-->
@@ -27,28 +27,35 @@
 </div>
 </header>
 <div class="adtop">
-<script type="text/javascript"><!--
-google_ad_client = "ca-pub-2651980583632980";
-/* Leaderboard */
-google_ad_slot = "1640145838";
+<script type="text/javascript">
+ google_ad_client = "ca-pub-3577687438512049";
+ if  (window. innerWidth  >= 800) {
+google_ad_slot = "9170414155";
 google_ad_width = 728;
 google_ad_height = 90;
-//-->
+} else if  (window.innerWidth < 400) {
+google_ad_slot = "9894353755";
+google_ad_width = 336;
+google_ad_height = 280;
+} else {
+google_ad_slot = "6077346957";
+google_ad_width = 468;
+google_ad_height = 60;
+}
 </script>
 <script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
 </script>
-<noscript><a href="http://www.facebook.com/PoemofQuotes" rel="nofollow"><img src="http://img.poemofquotes.com/fb-bw.png" alt="Like Us on Facebook!" /></a></noscript>
 </div>
 <div id="content">
 
 <nav>
 <a href="http://www.facebook.com/PoemofQuotes" rel="nofollow" title="Follow us on Facebook"><img class="social" src="http://img.poemofquotes.com/social-buttons.png" alt="Follow us on Facebook"></a>
 <ul>
-<li><a href="/" class="hlnav">Home</a></li><li><a href="/articles/" title="Poetry, relationship and other articles">Articles</a></li><li><a href="/funny-quotes/" title="Hilarious quotations">Funny Quotes</a></li><li><a href="/kidzcorner/" title="A place for kids">KidzCorner</a></li><li><a href="/poetry.php" title="Personal poetry">Poems</a></li><li><a href="/poets.php" title="Famous poets">Poets</a></li><li><a href="/quotes/" title="Quotes">Quotes</a></li><li><a href="/tools/" title="Poetry and relationship tools">Tools</a></li></ul>
+<li><a href="/" class="hlnav">Home</a></li><li><a href="/articles/" title="Poetry, relationship and other articles">Blog</a><ul><li><a href="/articles/category/books-articles" title="Book articles">Books</a></li><li><a href="/articles/category/holiday-articles" title="Holiday articles">Holiday</a></li><li><a href="/articles/category/movie-articles" title="Articles on movies">Movie</a></li><li><a href="/articles/category/relationship-articles" title="Relationship articles">Relationship</a></li><li><a href="/articles/category/writing-articles" title="Articles on writing">Writing</a></li></ul></li><li><a href="/poetry.php" title="Personal poetry">Poems</a><ul><li><a href="/american-poems/" title="American poetry">American</a></li><li><a href="/break-up-poems/" title="Broken heart and break up poetry">Break Up</a></li><li><a href="/friendship-poems/" title="Friendship and relationship poetry">Friendship</a></li><li><a href="/funny-poems/" title="Short funny poems">Funny</a></li><li><a href="/love-poems/" title="Romantic and love poetry">Love</a></li><li><a href="/miscellaneous-poems/" title="Nature, religious, art, horror and more poetry">Original Online</a></li><li><a href="/sad-poems/" title="Depressing, sad and angry poetry">Sad</a></li></ul></li><li><a href="/poets.php" title="Famous poets">Poets</a><ul><li><a href="/classicalpoets.php" title="Dante, William Shakespeare and other classical poets">Classical</a></li><li><a href="/18thcenturypoets.php" title="William Blake, Alexander Pope and other 18th century poets">18th century</a></li><li><a href="/19thcenturypoets.php" title="Emily Dickinson, Edgar Allen Poe and other 19th century poets">19th century</a></li><li><a href="/haiku/" title="Haiku poems">Haiku</a></li></ul></li><li><a href="/funny-quotes/" title="Hilarious quotations">Funny Quotes</a><ul><li><a href="/funny-quotes/holiday-quotes.php" title="Quotes for the holidays">Holiday</a></li><li><a href="/funny-quotes/movie-quotes.php" title="Hilarious film quotations">Movie</a></li></ul></li><li><a href="/quotes/" title="Quotes">Quotes</a><ul><li><a href="/quotes/holiday-quotes.php" title="All your favorite holiday quotes in one place">Holiday</a></li><li><a href="/quotes/movies/" title="Movies throughout history">Movie</a></li><li><a href="/quotes/biographies.php" title="Biographies and quotes from famous people">People</a></li><li><a href="/quotes/relationship-quotes.php" title="Love, break up, and friendship quotes">Relationship</a></li><li><a href="/religions/" title="Religious texts and quotes">Religious</a></li><li><a href="/quotes/sub" title="Subjects">Subjects</a></li><li><a href="/quotes/tv-shows/" title="TV Shows throughout history">TV Show</a></li></ul></li><li><a href="/kidzcorner/" title="A place for kids">KidzCorner</a><ul><li><a href="/kidzcorner/how-to-for-writing/" title="Tips for kids on writing">How to for Writing</a></li><li><a href="/kidzcorner/mother-goose/" title="Mother Goose rhymes">Mother Goose</a></li><li><a href="/kidzcorner/other/" title="Other rhymes">Other</a></li></ul></li><li><a href="/tools/" title="Poetry and relationship tools">Tools</a><ul><li><a href="/widgets/" title="Widgets for your website">Widgets</a></li></ul></li></ul>
 <script type="text/javascript"><!--
-google_ad_client = "ca-pub-2651980583632980";
+google_ad_client = "ca-pub-3577687438512049";
 /* sidebar-below-nav */
-google_ad_slot = "1823580081";
+google_ad_slot = "1507546559";
 google_ad_width = 250;
 google_ad_height = 250;
 //-->
@@ -84,11 +91,11 @@ You can choose to disable or turn off our cookies or third-party cookies within 
 <div id="bottom">
 <div id="BottomAd">
 <script type="text/javascript"><!--
-google_ad_client = "ca-pub-2651980583632980";
+google_ad_client = "ca-pub-3577687438512049";
 /* PofQ-300-bottom */
-google_ad_slot = "9239938987";
-google_ad_width = 300;
-google_ad_height = 250;
+google_ad_slot = "9894353755";
+google_ad_width = 336;
+google_ad_height = 280;
 //-->
 </script>
 <script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
@@ -96,65 +103,36 @@ google_ad_height = 250;
 </div>
 <aside id="BottomPopular">
 <span class="bold" style="color:#666">You may also enjoy:</span><br>
-<ul><li><a href="/tools/rhyme-generator.php">Rhyme Generator</a></li><li><a href="/funny-quotes/love-quotes.php">Funny Love Quotes</a></li><li><a href="/articles/greatest-love-poems.php">10 Greatest Love Poems</a></li><li><a href="/articles/poetry_forms.php">55 Types of Poetry</a></li><li><a href="/funny-quotes/movie-quotes.php">Funny Movie Quotes</a></li></ul></aside>
+<ul><li><a href="/tools/rhyme-generator.php">Rhyme Generator</a></li><li><a href="/funny-quotes/love-quotes.php">Funny Love Quotes</a></li><li><a href="/articles/greatest-love-poems.php">10 Greatest Love Poems</a></li><li><a href="/articles/poetry_forms.php">55 Types of Poetry</a></li><li><a href="/funny-quotes/movie-quotes.php">Hilarious Movie Quotes</a></li></ul></aside>
 </div>
 </section>
 </div>
 
 <footer>
 <div class="foot">
-<ul>
-<li><h3>Poems</h3></li>
-<li><a href="/american-poems/">American Poems</a></li>
-<li><a href="/break-up-poems/">Break Up Poems</a></li>
-<li><a href="/friendship-poems/">Friendship Poems</a></li>
-<li><a href="/funny-poems/">Funny Poems</a></li>
-<li><a href="/love-poems/">Love Poems</a></li>
-<li><a href="/miscellaneous-poems/">Original Online Poems</a></li>
-<li><a href="/sad-poems/">Sad Poems</a></li>
-<li><a href="/haiku/">Haiku Poems</a></li>
-<li><a href="/articles/holiday-poems.php">Holiday Poems</a></li>
-</ul>
-<ul>
-<li><h3>Poets</h3></li>
-<li><a href="/classicalpoets.php">Classical Poets</a></li>
-<li><a href="/18thcenturypoets.php">18th Century Poets</a></li>
-<li><a href="/19thcenturypoets.php">19th Century Poets</a></li>
-</ul>
-
-<ul>
-<li><h3>Quotes</h3></li>
-<li><a href="/quotes/">Famous Quotes</a></li>
-<li><a href="/funny-quotes/">Funny Quotes</a></li>
-<li><a href="/quotes/holiday-quotes.php">Holiday Quotes</a></li>
-<li><a href="/quotes/movies/">Movie Quotes</a></li>
-<li><a href="/quotes/biographies.php">People Quotes</a></li>
-<li><a href="/quotes/relationship-quotes.php">Relationship Quotes</a></li>
-<li><a href="/religions/">Religious Quotes</a></li>
-<li><a href="/quotes/tv-shows/">TV Show Quotes</a></li>
-</ul>
-
-<ul>
-<li><h3>Articles</h3></li>
-<li><a href="http://www.poemofquotes.com/articles/category/relationship-articles">Relationship</a></li>
-<li><a href="http://www.poemofquotes.com/articles/category/writing-articles">Writing</a></li>
-<li><a href="http://www.poemofquotes.com/articles/category/poetry-articles">Poetry</a></li>
-<li><a href="http://www.poemofquotes.com/articles/category/movie-articles">Movies</a></li>
-<li><a href="http://www.poemofquotes.com/articles/category/holiday-articles">Holidays</a></li>
-</ul>
-
-<ul>
-<li><h3>About</h3></li>
-<li><a href="http://www.poemofquotes.com/about.php" rel="author me">About PoemofQuotes</a></li> 
-<li><a href="http://www.poemofquotes.com/contact.php">Contact</a></li>
-<li><a href="http://www.poemofquotes.com/linktous.php">How to Cite a Page</a></li>
-<li><a href="http://www.poemofquotes.com/privacy-policy.php">Privacy Policy</a></li>
-<li><a href="http://www.poemofquotes.com/toa.php">Terms of Use</a></li>
-<li><a href="http://www.poemofquotes.com/partners.php">Partners</a></li>
-</ul>
-<div class="foot copy">Copyright © 2004-13.</div>
+<a href="http://www.poemofquotes.com/about.php" rel="author me">About</a> / 
+<a href="http://www.poemofquotes.com/contact.php">Contact</a> / 
+<a href="http://www.poemofquotes.com/linktous.php">How to Cite a Page</a> / 
+<a href="http://www.poemofquotes.com/privacy-policy.php">Privacy Policy</a> / 
+<a href="http://www.poemofquotes.com/toa.php">Terms of Use</a>
 </div>
+<div class="foot copy">Copyright © 2004-13.</div>
 </footer>
+
+<script type="text/javascript">
+
+					  var _gaq = _gaq || [];
+_gaq.push(['_setAccount', 'UA-33853748-1']);
+_gaq.push(['_trackPageview']);
+
+(function() {
+  var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+  ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+  var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+ })();
+
+</script>
+
 
 
 </body></html>
