--- a/m/me/mer/mergemedia.net.html
+++ b/m/me/mer/mergemedia.net.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the mergemedia.net privacy policy that was archived on 2013-04-30.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130430153615id_/http%3A//mergemedia.com/privacy_policy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the mergemedia.net privacy policy that was archived on 2013-12-27.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131227135608id_/http%3A//mergemedia.com/privacy_policy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns:fb="http://www.facebook.com/2008/fbml" xmlns="http://www.w3.org/1999/xhtml" xml:lang="en-gb" lang="en-gb"><head>
 <script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script src="http://static.dudamobile.com/DM_redirect.js" type="text/javascript"></script>
@@ -18,7 +18,7 @@
 /*<![CDATA[*/
 	var jax_live_site = 'http://mergemedia.com/index.php';
 	var jax_site_type = '1.5';
-	var jax_token_var='476a4b292b05f1cb7d91e2e1f4cb110e';
+	var jax_token_var='27d6afc68d9b358cc69889870742c6d6';
 /*]]>*/
 </script><script type="text/javascript" src="http://mergemedia.com/plugins/system/pc_includes/ajax_1.3.js"></script>
   <link rel="canonical" href="http://mergemedia.com/privacy_policy.html">
@@ -57,8 +57,8 @@
 	
 	<div id="header">
 		<div id="logo" onclick="location.href='http://mergemedia.com/';" style="cursor: pointer;"><h1 class="title">Privacy Policy</h1></div>
-		<div id="leaderboard"><a href="http://www.mb01.com/lnk.asp?o=4625&amp;c=54016&amp;a=13130">
-<img src="http://www.mb01.com/getimage.asp?m=2766&amp;o=4625&amp;i=54016.dat" width="728" height="90" border="0">
+		<div id="leaderboard"><a href="http://www.mb57.com/lnk.asp?o=2903&amp;c=41400&amp;a=13130">
+<img src="http://www.asseenonpcnetwork.com/Creatives/NoNoHair%20Banners/728x90_Black-bg.jpg" width="728" height="90" border="0">
 </a></div>
 	</div>
 	
@@ -97,7 +97,7 @@ google_ad_client = "pub-3040592323592577";
 google_ad_width = 336;
 google_ad_height = 280;
 google_ad_format = "336x280_as";
-google_ad_type = "text";
+google_ad_type = "TEXT_IMAGE";
 google_color_border = "FFFFFF";
 google_color_bg = "FFFFFF";
 google_color_link = "000080";
@@ -137,7 +137,7 @@ google_ad_client = "pub-3040592323592577";
 google_ad_width = 728;
 google_ad_height = 90;
 google_ad_format = "728x90_as";
-google_ad_type = "text";
+google_ad_type = "TEXT_IMAGE";
 google_color_border = "FFFFFF";
 google_color_bg = "FFFFFF";
 google_color_link = "000080";
@@ -170,6 +170,10 @@ google_color_url = "008000";
 			Fling.com Adult Personals</a>
 	</li>
 	<li class="mostread">
+		<a href="/offers/ecommerce/publishers_clearing_house_super_prize.html" class="mostread">
+			Publishers Clearing House Super Prize</a>
+	</li>
+	<li class="mostread">
 		<a href="/offers/ecommerce/hot_topic_music_inspired_clothing.html" class="mostread">
 			Hot Topic Music Inspired Clothing</a>
 	</li>
@@ -178,16 +182,8 @@ google_color_url = "008000";
 			Free Cosmo Subscription</a>
 	</li>
 	<li class="mostread">
-		<a href="/offers/ecommerce/publishers_clearing_house_super_prize.html" class="mostread">
-			Publishers Clearing House Super Prize</a>
-	</li>
-	<li class="mostread">
 		<a href="/offers/ecommerce/fingerhut.com.html" class="mostread">
 			Fingerhut.com</a>
-	</li>
-	<li class="mostread">
-		<a href="/offers/downloads/cursormania_free_cursors_us.html" class="mostread">
-			CursorMania Free Cursors US</a>
 	</li>
 	<li class="mostread">
 		<a href="/offers/dating/singlesnet_online_dating.html" class="mostread">
@@ -196,6 +192,10 @@ google_color_url = "008000";
 	<li class="mostread">
 		<a href="/offers/dating/real_mature_singles_over_50.html" class="mostread">
 			Real Mature Singles Over 50</a>
+	</li>
+	<li class="mostread">
+		<a href="/offers/dating/thirty_plus_singles_quick_sign_up.html" class="mostread">
+			Thirty Plus Singles Quick Sign Up</a>
 	</li>
 </ul>
 <p></p>
@@ -280,7 +280,7 @@ google_ad_client = "pub-3040592323592577";
 google_ad_width = 160;
 google_ad_height = 600;
 google_ad_format = "160x600_as";
-google_ad_type = "text";
+google_ad_type = "TEXT_IMAGE";
 google_color_border = "FFFFFF";
 google_color_bg = "FFFFFF";
 google_color_link = "000080";
