--- a/w/wo/wor/workbc.ca.html
+++ b/w/wo/wor/workbc.ca.html
@@ -1,7 +1,9 @@
-<!--The following is the downloaded HTML source of the workbc.ca privacy policy that was archived on 2013-05-20.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130520202743id_/http%3A//www2.gov.bc.ca/en/admin/privacy.page) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the workbc.ca privacy policy that was archived on 2013-12-27.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131227141515id_/http%3A//www2.gov.bc.ca/gov/admin/privacy.page) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
 <title>Privacy Statement - Province of B.C.</title>
 <!-- NAMESPACE DECLARATIONS -->
 <link href="http://purl.org/dc/terms/" rel="schema.DCTERMS">
@@ -26,17 +28,21 @@
 <link type="text/css" href="/assets/gov/css/cmf_topic_body.css" rel="stylesheet">
 <link type="text/css" href="/assets/gov/css/cmf_static_content.css" rel="stylesheet">
 <link type="text/css" href="/assets/gov/css/print.css" rel="stylesheet">
+<link type="text/css" href="/assets/gov/css/jquery.sidr.dark.css" rel="stylesheet">
+<link type="text/css" href="/assets/gov/css/gov_rwd.css" rel="stylesheet">
 <script type="text/javascript" src="/assets/gov/js/jquery/jquery-1.7.1.min.js"></script>
+<script type="text/javascript" src="/assets/gov/js/jquery/jquery.sidr.min.js"></script>
 <script type="text/javascript" src="/assets/gov/js/misc.js"></script>
 <script type="text/javascript" src="/assets/gov/js/jquery/jquery.easing.1.3.js"></script>
 <script type="text/javascript" src="/assets/gov/js/navigation_global.js"></script>
+<script type="text/javascript" src="/assets/gov/js/jquery/jquery.nestedAccordion.js"></script>
 <script type="text/javascript" src="/assets/gov/js/jquery/jquerycookie.js"></script>
-<script type="text/javascript" src="/assets/gov/js/text_sizer.js"></script>
 
 
 <!-- MANDATORY METADATA BEGINS  -->
 <meta name="title" content="Privacy Statement">
 <meta name="DCTERMS.title" content="Privacy Statement">
+<meta name="navigation_title" content="Privacy Statement">
 <!-- MANDATORY METADATA ENDS  -->
 
 
@@ -50,23 +56,24 @@
 <div class="ls-area" id="area-navtheme">
 <div class="ls-area-body" id="ls-gen2-ls-area-body">
 <div class="ls-cmp-wrap ls-1st" id="w1336089698828">
-<div class="iw_component" id="1336089698828"><div style="left:-3000px;position:absolute;width:500px" class="access">
-<p>
-<a href="#row-content" accesskey="1">Skip to main content</a>
-</p>
-<p>
-<a href="#navigation" accesskey="n">Skip to navigation</a>
-</p>
-<p>The access keys for this page are:</p>
-<ul class="access">
-<li>ALT plus 0 links to this site's <a href="/gov/admin/accessibility.page?" accesskey="0">Accessibility Statement.</a>
+<div class="iw_component" id="1336089698828">
+<!-- googleoff: all --><div id="access">
+<ul>
+<li>
+<a href="#area-contentmain" accesskey="1">Skip to main content</a>
 </li>
-<li>ALT plus 1 skips to main content.</li>
-<li>ALT plus N skips to navigation.</li>
+<li>
+<a href="#navigation" accesskey="n">Skip to navigation</a>
+</li>
+<li>
+<a href="/gov/admin/accessibility.page?" accesskey="0">Accessibility Statement</a>
+</li>
 </ul>
 </div><div id="services_header">
 <a href="https://extranet.gov.bc.ca/forms/gov/contact/index.html" class="serviceLink">Contact Government</a><a href="http://www.newsroom.gov.bc.ca" class="serviceLink">News</a><a href="http://www2.gov.bc.ca/en/services_finder/finder.page" class="serviceLink forms">Services &amp; Forms</a>
-</div><div id="overlay" style="height: 2566px;"></div><div id="navigation">
+</div><div id="mobile-header">
+<a href="#sidr-left" id="responsive-button-left"><img src="/assets/gov/images/site_navigation_global/m_menu.png" alt="Theme Mobile Menu"></a>
+</div><div id="overlay"></div><div id="navigation">
 <div class="themes overlayControls">
 <menu class="horizontalMenu">
 <li class="flyoutMenuItem" section="topperFlyout_8CB0A2C5DC3B19401323F1A3F22D5769">
@@ -123,10 +130,13 @@
 <a href="/gov/theme.page?id=12784E4B87551818643212879D592866">Open Government</a>
 </li>
 <li>
-<a href="/gov/theme.page?id=DCE5D2A5AB44B3928DB60555D892E611">Laws &amp; Publications</a>
+<a href="/gov/theme.page?id=5154F1F564CE60C41B692056A13DEBA6">Contact Us</a>
 </li>
 <li>
-<a href="/gov/theme.page?id=5154F1F564CE60C41B692056A13DEBA6">Contact Us</a>
+<a href="/gov/theme.page?id=D8E5FDC8B04A13F8D1E77F8D52EE563A">Services for Government</a>
+</li>
+<li>
+<a href="/gov/theme.page?id=DCE5D2A5AB44B3928DB60555D892E611">Laws &amp; Publications</a>
 </li>
 </ul>
 <div class="topDestinations">
@@ -194,7 +204,7 @@
 <a href="https://www.addresschange.gov.bc.ca/">Change of Address</a>
 </li>
 <li>
-<a href="http://www.welcomebc.ca/wbc/immigration/index.page?WT.svl=Topnav">Immigration</a>
+<a href="http://www.welcomebc.ca/Immigrate/Immigrate.aspx">Immigration</a>
 </li>
 <li>
 <a href="http://www.seniorsbc.ca/">Seniors</a>
@@ -374,6 +384,9 @@
 <li>
 <a href="http://www.ag.gov.bc.ca/courts/">Court Services</a>
 </li>
+<li>
+<a href="http://www.healthlinkbc.ca/">HealthLinkBC</a>
+</li>
 </ul>
 </div>
 </div>
@@ -462,7 +475,7 @@
 </div>
 <div class="clear"></div>
 </div>
-</div>
+<!-- googleon: all --></div>
 </div>
 </div>
 </div>
@@ -476,9 +489,10 @@
 <div class="ls-area" id="area-header">
 <div class="ls-area-body" id="ls-gen4-ls-area-body">
 <div class="ls-cmp-wrap ls-1st" id="w1336089698829">
-<div class="iw_component" id="1336089698829"><div id="banner">
+<div class="iw_component" id="1336089698829">
+<!-- googleoff: all --><div id="banner">
 <a href="http://www2.gov.bc.ca/gov/index.page" class="logo" title="B.C. Home"></a>
-<h1 id="activetheme">Government</h1>
+<h1 id="activetheme"></h1>
 <script type="text/javascript">
 				// find the active theme from the global navigation component, and print the theme name in the header
 				$(document).ready(function() {				
@@ -503,13 +517,17 @@
 					}
 				});			
 			</script>
-<div id="searchArea">
-<form onsubmit="javascript:this.q.value=this.q.value.toLowerCase();" method="get" id="search" action="http://www2.gov.bc.ca/gov/search/results.page">
-<input type="text" name="q" id="searchBox" value="" class="placeholder"><a style="text-decoration:none;" href="#" class="SubmitLinkButton">Search</a>
+<div class="test" id="searchArea">
+<form onsubmit="javascript:this.q.value=this.q.value.toLowerCase();" method="get" id="search" action="/gov/admin/privacy.page?submit=true&amp;componentID=1336089698829">
+<input onkeyup="ss_keyhandle(event)" autocomplete="off" type="text" name="keywords" id="searchBox" value=""><input type="hidden" value="gov" name="config"><a style="text-decoration:none;" href="#" class="SubmitLinkButton">Search</a>
+<br clear="all">
+<div id="typeAhead">
+<ul id="keyword_list"></ul>
+</div>
 </form>
 </div>
 </div>
-</div>
+<!-- googleon: all --></div>
 </div>
 </div>
 </div>
@@ -524,7 +542,8 @@
 <div class="ls-area-body" id="ls-gen6-ls-area-body">
 <div class="ls-cmp-wrap ls-1st" id="w1336089698830">
 <div class="iw_component" id="1336089698830">
-</div>
+<!-- googleoff: all -->
+<!-- googleon: all --></div>
 </div>
 </div>
 </div>
@@ -539,11 +558,13 @@
 <div class="ls-area-body" id="ls-gen8-ls-area-body">
 <div class="ls-cmp-wrap ls-1st" id="w1336089698831">
 <div class="iw_component" id="1336089698831"><div id="breadcrumbs">
+<!-- googleoff: snippet -->
 <ul>
 <li>
 <a href="/gov/index.page?">B.C. Home</a>
 </li>
 </ul>
+<!-- googleon: snippet -->
 </div>
 </div>
 </div>
@@ -634,7 +655,8 @@
 <div class="ls-area-body" id="ls-gen15-ls-area-body">
 <div class="ls-cmp-wrap ls-1st" id="w1336089698833">
 <div class="iw_component" id="1336089698833">
-</div>
+<!-- googleoff: all -->
+<!-- googleon: all --></div>
 </div>
 </div>
 </div>
@@ -648,7 +670,221 @@
 <div class="ls-area" id="area-footer">
 <div class="ls-area-body" id="ls-gen17-ls-area-body">
 <div class="ls-cmp-wrap ls-1st" id="w1336089698834">
-<div class="iw_component" id="1336089698834"><div id="footer_theme_links_container">
+<div class="iw_component" id="1336089698834"><div id="m-nav-left">
+<!-- googleoff: all -->
+<div id="m-button-close">
+<a onclick="$.sidr('close', 'sidr-left');" href="#"><img src="/assets/gov/images/site_navigation_global/m_close.png"></a>
+</div>
+<ul class="accordion">
+<li>
+<a href="/gov/theme.page?id=8CB0A2C5DC3B19401323F1A3F22D5769">Government</a>
+<ul>
+<li>
+<a href="/gov/theme.page?id=259D3A1F1BCB8D601B13742603415970">The Premier, Cabinet &amp; MLAs</a>
+</li>
+<li>
+<a href="/gov/theme.page?id=36AEE53A6FC100320499FECC00FD9934">Ministries &amp; Organizations</a>
+</li>
+<li>
+<a href="/gov/theme.page?id=FCF067811855E3B53710C9A084F94066">About the B.C. Government</a>
+</li>
+<li>
+<a href="/gov/theme.page?id=8B6FCA5E2DBD9E7D98334EB60D6F77FE">Other Levels of Government</a>
+</li>
+<li>
+<a href="/gov/theme.page?id=12784E4B87551818643212879D592866">Open Government</a>
+</li>
+<li>
+<a href="/gov/theme.page?id=5154F1F564CE60C41B692056A13DEBA6">Contact Us</a>
+</li>
+<li>
+<a href="/gov/theme.page?id=D8E5FDC8B04A13F8D1E77F8D52EE563A">Services for Government</a>
+</li>
+<li>
+<a href="/gov/theme.page?id=DCE5D2A5AB44B3928DB60555D892E611">Laws &amp; Publications</a>
+</li>
+</ul>
+</li>
+<li>
+<a href="/gov/theme.page?id=B7D67ECD8DD382E2A9F6E8F8149011E4">Residents</a>
+<ul>
+<li>
+<a href="/gov/theme.page?id=B18FA5C86281B72BB9914EC541216F21">People</a>
+</li>
+<li>
+<a href="/gov/theme.page?id=C20086F4FDF627499800D60391C384E3">Government ID</a>
+</li>
+<li>
+<a href="/gov/theme.page?id=4DE87E7EE0859251309F8142B9BD4824">Taxes &amp; Rebates</a>
+</li>
+<li>
+<a href="/gov/theme.page?id=E2F17E8BD56D50D8D4BAA2892C68960F">Seniors</a>
+</li>
+<li>
+<a href="/gov/theme.page?id=043ED83FA4319EF9EC01F4F5C5FD94FD">Housing</a>
+</li>
+<li>
+<a href="/gov/theme.page?id=06309B540C84E3FCA1D318EBDF199C75">Daily Life</a>
+</li>
+<li>
+<a href="/gov/theme.page?id=A6B43F4DDD40B1070E53BC362867CD37">Sports &amp; Recreation</a>
+</li>
+<li>
+<a href="/gov/theme.page?id=CE442A092BA5D412CF418DFDEC3A488D">Driving &amp; Transportation</a>
+</li>
+</ul>
+</li>
+<li>
+<a href="/gov/theme.page?id=F5415B90D214B10A6245D30D397A05A1">Education</a>
+<ul>
+<li>
+<a href="/gov/theme.page?id=F2DF0F6E09AD8EB24078E5EEAA8DCC68">Early Learning</a>
+</li>
+<li>
+<a href="/gov/theme.page?id=1D321409279193982AF02BB22F985851">Kindergarten to Grade 12</a>
+</li>
+<li>
+<a href="/gov/theme.page?id=F390915858CC9CA2072459222CBCB67C">Post-secondary Education</a>
+</li>
+<li>
+<a href="/gov/theme.page?id=B8FE58BB8300F1E1BE88911299FEF364">Adult Learning</a>
+</li>
+<li>
+<a href="/gov/theme.page?id=61929F8C840224021F033289E28BFCD8">Places to Learn</a>
+</li>
+<li>
+<a href="/gov/theme.page?id=80B26AE3A0ED92412A3341AD77C50C9F">Administration</a>
+</li>
+</ul>
+</li>
+<li>
+<a href="/gov/theme.page?id=1629C69A7117AC65E91C018EA07D7E44">Business</a>
+<ul>
+<li>
+<a href="/gov/theme.page?id=A758E4D3F7E4B0B2765E9B762A328310">Business Management</a>
+</li>
+<li>
+<a href="/gov/theme.page?id=34950904C49722331EF1DED42D10A013">Construction Industry</a>
+</li>
+<li>
+<a href="/gov/theme.page?id=443783272A80626685CF33D5999B9E1F">Natural Resource Industries</a>
+</li>
+<li>
+<a href="/gov/theme.page?id=00A261A2168BFDB1003DBE30998466EE">Land Use</a>
+</li>
+<li>
+<a href="/gov/theme.page?id=4DA4C0F9EA4A8A26605350E5097DEADD">Taxes &amp; Rebates</a>
+</li>
+<li>
+<a href="/gov/theme.page?id=1DB4C5A365801352D049F10D3923DA9A">Permits, Licences &amp; Forms</a>
+</li>
+<li>
+<a href="/gov/theme.page?id=A28F1E9BB1BAE2E8E0E1F1877AB40D95">Water Use</a>
+</li>
+</ul>
+</li>
+<li>
+<a href="/gov/theme.page?id=E0EA3A213DB57A098786BF9F390CA86A">Environment</a>
+<ul>
+<li>
+<a href="/gov/theme.page?id=4D9B65E26DFA11EF78C200B82FAD10BD">Climate Change</a>
+</li>
+<li>
+<a href="/gov/theme.page?id=A4E25FF82206B7E3549AD2423494005C">Land</a>
+</li>
+<li>
+<a href="/gov/theme.page?id=5CBA2ED61F5F6A004388CD25D5CBABD4">Outdoor Recreation</a>
+</li>
+<li>
+<a href="/gov/theme.page?id=D2AEA65E1B0995C028F5415CDA3491DD">Plants &amp; Animals</a>
+</li>
+<li>
+<a href="/gov/theme.page?id=1D1E3C96BFEE11B9960E8FFEC5AF406A">Waste Management</a>
+</li>
+<li>
+<a href="/gov/theme.page?id=A107794D5085039872470FDB7C7FE62D">Water &amp; Air</a>
+</li>
+<li>
+<a href="/gov/theme.page?id=3AA8459D7BBB83148579662A6237100D">Research &amp; Publications</a>
+</li>
+</ul>
+</li>
+<li>
+<a href="/gov/theme.page?id=D5340F7BFE2793E612F265125067E05C">Health &amp; Safety</a>
+<ul>
+<li>
+<a href="/gov/theme.page?id=92F701F25B620CC26E22D695055825CA">Health Services</a>
+</li>
+<li>
+<a href="/gov/theme.page?id=77259C98A670AC930366E75F02DB4DCB">Health Insurance</a>
+</li>
+<li>
+<a href="/gov/theme.page?id=CB0AD8D8AEADDDD7AF685489802F31A1">Healthy Families</a>
+</li>
+<li>
+<a href="/gov/theme.page?id=1E928AC24AE0DD5C3095566AA56AE9D1">Healthy Living</a>
+</li>
+<li>
+<a href="/gov/theme.page?id=7E0ACCE65CCB2AA02B2F065A35515B8B">Living Safely</a>
+</li>
+<li>
+<a href="/gov/theme.page?id=FC067FB53B135AFBB6D25E46BA3E8465">Consumer Information</a>
+</li>
+<li>
+<a href="/gov/theme.page?id=42B39E1C633870CE99CB4A588FA3B965">B.C.'s Justice System</a>
+</li>
+<li>
+<a href="/gov/theme.page?id=A8F32056E4192102A51A3F0FF373223C">Home &amp; Community Care</a>
+</li>
+</ul>
+</li>
+<li>
+<a href="/gov/theme.page?id=154F929B67DE04862F97AAA8EB273445">Employment</a>
+<ul>
+<li>
+<a href="/gov/theme.page?id=64FFA94D3DD30AC8BCA3EDAFC1DDE890">Work for the B.C. Government</a>
+</li>
+<li>
+<a href="/gov/theme.page?id=B3752C36297F2A17229B69D2A8DF5C92">Job Seekers &amp; Employees</a>
+</li>
+<li>
+<a href="/gov/theme.page?id=534F924CA519AD88CF3501C0083F18BD">Employers</a>
+</li>
+<li>
+<a href="/gov/theme.page?id=6CE2133CB253E2842349EC69BBBC64D3">Job &amp; Career Training</a>
+</li>
+<li>
+<a href="/gov/theme.page?id=F8DE3833782B9D2F9E6465CE12207B8E">Employment Assistance Programs</a>
+</li>
+<li>
+<a href="/gov/theme.page?id=69A831C7AD3D243EE4E0F740B8D4990C">Employment Standards, Tribunals &amp; Boards</a>
+</li>
+</ul>
+</li>
+<li>
+<a href="/gov/theme.page?id=F9A8A09A65CE26DDE77E10C5CB32A392">About B.C.</a>
+<ul>
+<li>
+<a href="/gov/theme.page?id=B12CD167A475FAADF24D6FB532FAEFFB">Geography &amp; Demographics</a>
+</li>
+<li>
+<a href="/gov/theme.page?id=0339B87162CF4D379BE87E7DE5E72656">Immigrating to B.C.</a>
+</li>
+<li>
+<a href="/gov/theme.page?id=B9142824C50F65617ABD7E2ADB07FADE">Travel</a>
+</li>
+<li>
+<a href="/gov/theme.page?id=35C7FB7E0B28B011F57FA052DEA7A007">Recreation &amp; the Outdoors</a>
+</li>
+<li>
+<a href="/gov/theme.page?id=1BC2B2B9E83F5AB87884E60783F0221B">Arts &amp; Culture</a>
+</li>
+</ul>
+</li>
+</ul>
+<!-- googleon: all -->
+</div><div id="footer_theme_links_container">
+<!-- googleoff: all -->
 <div class="footer_theme_links">
 <h3>
 <a href="/gov/theme.page?id=8CB0A2C5DC3B19401323F1A3F22D5769">Government</a>
@@ -670,10 +906,13 @@
 <a href="/gov/theme.page?id=12784E4B87551818643212879D592866">Open Government</a>
 </li>
 <li>
-<a href="/gov/theme.page?id=DCE5D2A5AB44B3928DB60555D892E611">Laws &amp; Publications</a>
+<a href="/gov/theme.page?id=5154F1F564CE60C41B692056A13DEBA6">Contact Us</a>
 </li>
 <li>
-<a href="/gov/theme.page?id=5154F1F564CE60C41B692056A13DEBA6">Contact Us</a>
+<a href="/gov/theme.page?id=D8E5FDC8B04A13F8D1E77F8D52EE563A">Services for Government</a>
+</li>
+<li>
+<a href="/gov/theme.page?id=DCE5D2A5AB44B3928DB60555D892E611">Laws &amp; Publications</a>
 </li>
 </ul>
 </div>
@@ -867,6 +1106,7 @@
 </li>
 </ul>
 </div>
+<!-- googleon: all -->
 </div>
 </div>
 </div>
@@ -875,7 +1115,9 @@
 <div class="iw_component" id="1336089698835"><div id="footer_container">
 <div id="footer">
 <div id="media_links">
+<div id="media_links_img">
 <a href="/gov/index.page?"><img alt="B.C. Home" src="/assets/gov/images/bc_logo.gif"></a>
+</div>
 <ul>
 <li>
 <a href="http://www.youtube.com/ProvinceofBC">YouTube</a>
