e2bn.org (archived on 2013-12-27)
{
  "alexa_rank": 245715,
  "analysis_subcorpus": true,
  "categories": "business;education",
  "char_count": 2119,
  "classifier_probability": 0.81,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 9.96,
  "homepage_snapshot_redirected_domain": "e2bn.org",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20130929023125id_/http://www.e2bn.org/",
  "homepage_snapshot_url": "https://web.archive.org/web/20130929023125id_/http%3A//e2bn.org",
  "interval": "2013_B",
  "link_text": "Privacy Statement",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "e2bn.org",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20131227150318id_/http%3A//www.e2bn.org/aboutus/75/privacystatement.html",
  "policy_title": "Privacy Statement - E2BN",
  "policy_url": "e2bn.org/aboutus/75/privacystatement.html",
  "sha1": "6774352b1cfd169735f170ce652ad66ed5d55ec5",
  "simhash": 14108000278868003105,
  "simhash_updated": false,
  "site_hostname": "e2bn.org",
  "site_url": "http://e2bn.org",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20131227150318",
  "word_count": 326,
  "year": 2013
}

--- a/e/e2/e2b/e2bn.org.html
+++ b/e/e2/e2b/e2bn.org.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the e2bn.org privacy policy that was archived on 2013-06-19.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130619195349id_/http%3A//www.e2bn.org/aboutus/75/privacystatement.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the e2bn.org privacy policy that was archived on 2013-12-27.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131227150318id_/http%3A//www.e2bn.org/aboutus/75/privacystatement.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -49,6 +49,7 @@
 																	<li class=""><a href="http://www.e2bn.org/aboutus/20/contact-us.html">Contact Us</a></li>
 																	<li class=""><a href="http://www.e2bn.org/aboutus/74/accessibility.html">Accessibility</a></li>
 																	<li class=""><a href="http://www.e2bn.org/aboutus/365/privacy-cookies-and-terms-of-use.html">Privacy, Cookies and Terms of Use</a></li>
+																	<li class=""><a href="http://www.e2bn.org/aboutus/422/all-about-e2bn-video.html">All about E2BN video</a></li>
 																											<li><a href="http://extranet.e2bn.org/login/" class="">Members Area</a></li>
 																	</ul>
 					<div class="columnRightInternal">
