uvvu.com (archived on 2013-12-27)
{
  "alexa_rank": 103968,
  "analysis_subcorpus": true,
  "categories": "business;education",
  "char_count": 13870,
  "classifier_probability": 0.99,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 15.44,
  "homepage_snapshot_redirected_domain": "uvvu.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20131001015314id_/http://www.uvvu.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20131001015314id_/http%3A//uvvu.com",
  "interval": "2013_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "uvvu.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20131227192409id_/http%3A//www.uvvu.com/privacy-policy.php",
  "policy_title": "UltraViolet",
  "policy_url": "uvvu.com/privacy-policy.php",
  "sha1": "a558855c7ddcafce7f63e8aedb2859bf1e1f2c1c",
  "simhash": 12635545261880218672,
  "simhash_updated": false,
  "site_hostname": "uvvu.com",
  "site_url": "http://uvvu.com",
  "smog": 16.81,
  "strict_updated": false,
  "timestamp": "20131227192409",
  "word_count": 2205,
  "year": 2013
}

--- a/u/uv/uvv/uvvu.com.html
+++ b/u/uv/uvv/uvvu.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the uvvu.com privacy policy that was archived on 2013-06-22.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130622044637id_/http%3A//uvvu.com/privacy-policy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the uvvu.com privacy policy that was archived on 2013-12-27.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131227192409id_/http%3A//www.uvvu.com/privacy-policy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html lang="en" xmlns="http://www.w3.org/1999/xhtml" class=" "><head>
 		<meta http-equiv="Content-Type" content="text/html;charset=utf-8">
@@ -57,7 +57,7 @@
         <div id="login" style="overflow: hidden; padding-top: 5px;">
                 <iframe src="https://my.uvvu.com/ssp/public/SigninIframe.jsf" width="500px" height="85px" id="login-frame" style="overflow:hidden;" scrolling="no">
                 </iframe>
-        </div>
+        </div> 
 
 		<div class="language-selection">
 			
@@ -65,7 +65,10 @@
 
 		<div class="language-selection-overlay">
 			<ul>
-			 <li><a href="/privacy-policy.php?lang=en-au">English (Australia)&nbsp;<img class="icon-flag" src="images/flag-icons/au.png" alt="English (Australia)"></a></li> <li><a href="/privacy-policy.php?lang=en-ca">English (Canada)&nbsp;<img class="icon-flag" src="images/flag-icons/ca.png" alt="English (Canada)"></a></li> <li><a href="/privacy-policy.php?lang=en-gb">English (United Kingdom)&nbsp;<img class="icon-flag" src="images/flag-icons/gb.png" alt="English (United Kingdom)"></a></li> <li><a href="/privacy-policy.php?lang=en-us">English (United States)&nbsp;<img class="icon-flag" src="images/flag-icons/us.png" alt="English (United States)"></a></li>			</ul>
+			 <li><a href="/privacy-policy.php?lang=en-au">English (Australia)&nbsp;<img class="icon-flag" src="images/flag-icons/au.png" alt="English (Australia)"></a></li> <li><a href="/privacy-policy.php?lang=en-ca">English (Canada)&nbsp;<img class="icon-flag" src="images/flag-icons/ca.png" alt="English (Canada)"></a></li> <li><a href="/privacy-policy.php?lang=en-gb">English (United Kingdom)&nbsp;<img class="icon-flag" src="images/flag-icons/gb.png" alt="English (United Kingdom)"></a></li> <li><a href="/privacy-policy.php?lang=en-us">English (United States)&nbsp;<img class="icon-flag" src="images/flag-icons/us.png" alt="English (United States)"></a></li>			<li>New UVVU.com coming soon<br>with French and German!</li>
+			<li><img style="float: left;" src="images/flag-icons/at.png"><img style="float: left;" src="images/flag-icons/fr.png"><img style="float: left;" src="images/flag-icons/de.png"><img style="float: left;" src="images/flag-icons/ch.png"></li><br>
+
+			</ul>
 		</div>
 					</div>
 				</div>
