helpbuildweb.com (archived on 2013-12-27)
{
  "alexa_rank": 458158,
  "analysis_subcorpus": true,
  "categories": "business;informationtech",
  "char_count": 2782,
  "classifier_probability": 1.0,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 12.97,
  "homepage_snapshot_redirected_domain": "helpbuildweb.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20131004134559id_/http://helpbuildweb.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20131004134559id_/http%3A//helpbuildweb.com",
  "interval": "2013_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "helpbuildweb.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20131227225050id_/http%3A//helpbuildweb.com/privacy.php",
  "policy_title": "Privacy Policy",
  "policy_url": "helpbuildweb.com/privacy.php",
  "sha1": "835d47dd61768e0f2ed1670f12f36acacd24b292",
  "simhash": 1169194942713869266,
  "simhash_updated": false,
  "site_hostname": "helpbuildweb.com",
  "site_url": "http://helpbuildweb.com",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20131227225050",
  "word_count": 456,
  "year": 2013
}

--- a/h/he/hel/helpbuildweb.com.html
+++ b/h/he/hel/helpbuildweb.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the helpbuildweb.com privacy policy that was archived on 2013-06-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130616102950id_/http%3A//helpbuildweb.com/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the helpbuildweb.com privacy policy that was archived on 2013-12-27.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131227225050id_/http%3A//helpbuildweb.com/privacy.php) for the most accurate reproduction.-->
 
 <html><head>
 	<meta http-equiv="Content-Type" content="text/html;charset=utf-8">
@@ -7,7 +7,10 @@
 	<meta name="keywords" content="">
 	<meta name="description" content="">
 	<link href="/index.css" type="text/css" rel="stylesheet">
-	<script id="twitter-wjs" src="//platform.twitter.com/widgets.js"></script><script src="/jquery-1.7.2.min.js" type="text/javascript"></script>
+	<script type="text/javascript" defer="" async="" src="https://www.helpbuildweb.com/piwik//piwik.js"></script><script id="twitter-wjs" src="//platform.twitter.com/widgets.js"></script><script src="/jquery-1.7.2.min.js" type="text/javascript"></script>
+	<style>
+		.hl {display:none;}
+	</style>
 </head>
 <body>
 
@@ -95,17 +98,42 @@ If you wish to disable cookies, you may do so through your individual browser op
 
 </p></div>
 
+
+<center><div style="margin-bottom:10px; margin-top:10px">
+<script async="" src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- unit_bottom -->
+<ins class="adsbygoogle" style="display:inline-block;width:468px;height:15px" data-ad-client="ca-pub-5918980325691121" data-ad-slot="6170462285"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+</div></center>
+
 <div class="foot">
   <center>
-	<a href="http://www.thebeautytool.com">Women Beauty Community</a>
-  </center>
-<center>
 	<a href="/">Home</a> | 
 	<a href="mailto:gold.peng@gmail.com">Contact</a> |
-	<a href="/privacy.php">Privacy Policy</a>
+	<a href="/privacy.php">Privacy Policy</a> |
 </center>
 </div>
 </div>
+
+<!-- Piwik -->
+<script type="text/javascript"> 
+  var _paq = _paq || [];
+  _paq.push(['trackPageView']);
+  _paq.push(['enableLinkTracking']);
+  (function() {
+    var u=(("https:" == document.location.protocol) ? "https" : "http") + "://www.helpbuildweb.com/piwik//";
+    _paq.push(['setTrackerUrl', u+'piwik.php']);
+    _paq.push(['setSiteId', 2]);
+    var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0]; g.type='text/javascript';
+    g.defer=true; g.async=true; g.src=u+'piwik.js'; s.parentNode.insertBefore(g,s);
+  })();
+
+</script>
+<noscript><p><img src="http://www.helpbuildweb.com/piwik/piwik.php?idsite=2" style="border:0" alt="" /></p></noscript>
+<!-- End Piwik Code -->
+
 
 
 
