--- a/e/em/emi/emich.edu.html
+++ b/e/em/emi/emich.edu.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the emich.edu privacy policy that was archived on 2013-06-26.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130626164644id_/http%3A//www.emich.edu/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the emich.edu privacy policy that was archived on 2013-12-27.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131227230616id_/http%3A//www.emich.edu/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml" lang="en"><head>
     <title>Eastern Michigan University: Privacy Statement</title>
@@ -189,7 +189,7 @@
         <ul>
             <li><a href="http://www.ce.emich.edu/">Continuing Education</a></li>
             <li><a href="/admissions/requirements/forms_library.php">Admissions Forms</a></li>
-            <li><a href="/fusion/">Fusion</a></li>
+            <li><a href="/orientation/">Fusion</a></li>
             <li><a href="/admissions/contactus/index.php">Contact Admissions</a></li>
         </ul>
     </div>
