ttra2008.com (archived on 2013-12-28)
{
  "alexa_rank": 61424,
  "analysis_subcorpus": true,
  "categories": "informationtech",
  "char_count": 2566,
  "classifier_probability": 0.81,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 11.86,
  "homepage_snapshot_redirected_domain": "ttra2008.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20131007205650id_/http://directory.ttra2008.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20131007205650id_/http%3A//ttra2008.com",
  "interval": "2013_B",
  "link_text": "PrivacyPolicy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "ttra2008.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20131228072150id_/http%3A//directory.ttra2008.com/privacy.html",
  "policy_title": "Submit Your Website Link For Free",
  "policy_url": "directory.ttra2008.com/privacy.html",
  "sha1": "f7237120d216a3025eccaf753d6f101d9e874b29",
  "simhash": 12582975481651691890,
  "simhash_updated": false,
  "site_hostname": "ttra2008.com",
  "site_url": "http://ttra2008.com",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20131228072150",
  "word_count": 418,
  "year": 2013
}

--- a/t/tt/ttr/ttra2008.com.html
+++ b/t/tt/ttr/ttra2008.com.html
@@ -1,10 +1,11 @@
-<!--The following is the downloaded HTML source of the ttra2008.com privacy policy that was archived on 2013-06-30.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130630031931id_/http%3A//directory.ttra2008.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the ttra2008.com privacy policy that was archived on 2013-12-28.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131228072150id_/http%3A//directory.ttra2008.com/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <title>Submit Your Website Link For Free </title>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <link rel="stylesheet" type="text/css" href="http://images.ientrymail.com/tomld/www.ttra2008.com/layout.css">
+<script src="/jquery-1.10.2.js"></script>
 </head>
 <body><script src="http://www.ientry.com/ustream_header.php" type="text/javascript"></script>
 <div class="top-ientry-bar">
@@ -16,8 +17,18 @@
  <script type="text/javascript" language="JavaScript" src="http://aj.600z.com/aj/66246/0/vj?z=1&amp;dim=65097"></script>
  <div class="ientry-bar-clear"> </div>
 </div>
-<center><script language="JavaScript" src="http://aj.600z.com/aj/61996/0/vj?z=1&amp;dim=144&amp;pos=1"></script></center><br><div id="outer"><div id="hdr"><a href="/"><img class="h-logo" src="http://images.ientrymail.com/tomld/www.ttra2008.com/images/logo.gif" alt="Web directory"></a><p class="nav1"><a href="/">Home</a>|<a href="/about.html">About</a>|<a href="/contact.html">Contact Us</a></p><div id="search"><form action="/search.html" method="psot"><input type="text" name="q" size="37" maxlength="250" class="stext" value=""><input type="image" src="http://images.ientrymail.com/tomld/www.ttra2008.com/images/s-btn.gif" name="search-btn" value="Search" class="s-btn" alt="Search"></form></div><div class="clear"></div><p class="nav2"><a href="/submit.html">Submit Your Site</a>|<a href="/newsletter.html">Newsletter</a>|<a href="/advertise.html">Advertise</a></p></div><div id="main-outer"><img style="float:left;" src="http://images.ientrymail.com/tomld/www.ttra2008.com/images/l-back.gif" alt="left background"><img style="float:right;" src="http://images.ientrymail.com/tomld/www.ttra2008.com/images/r-back.gif" alt="left background"><div id="main"><div id="leftcol"><!-- Latest Featured Links --><p class="l-top"><img src="http://images.ientrymail.com/tomld/www.ttra2008.com/images/l-top.gif" alt="border-top"></p><div class="main"><div class="clear"></div></div><p class="l-bottom"><img src="http://images.ientrymail.com/tomld/www.ttra2008.com/images/l-bottom.gif" alt="border-bottom"></p><p class="l-top"><img src="http://images.ientrymail.com/tomld/www.ttra2008.com/images/l-top.gif" alt="border-top"></p><div class="main"><h3>Browse Directory</h3><div id="category"><table border="0" cellpadding="0" cellspacing="0" style="width:100%;"><tbody><tr>
- <td valign="top" style="padding-left:5px;"><b style="font-size: 16px;" class="mainarticle">Privacy Policy</b>
+<center><script language="JavaScript" src="http://aj.600z.com/aj/61996/0/vj?z=1&amp;dim=144&amp;pos=1"></script></center><br><div id="outer"><div id="hdr"><a href="/"><img class="h-logo" src="http://images.ientrymail.com/tomld/www.ttra2008.com/images/logo.gif" alt="Web directory"></a><p class="nav1"><a href="/">Home</a>|<a href="/about.html">About</a>|<a href="/contact.html">Contact Us</a></p><div id="search"><form id="search-submit" method="psot"><input type="text" id="qu" size="37" maxlength="250" class="stext" value=""><input type="image" src="http://images.ientrymail.com/tomld/www.ttra2008.com/images/s-btn.gif" name="search-btn" value="Search" class="s-btn" alt="Search"></form></div><div class="clear"></div><p class="nav2"><a href="/submit.html">Submit Your Site</a>|<a href="/newsletter.html">Newsletter</a>|<a href="/advertise.html">Advertise</a></p></div><div id="main-outer"><img style="float:left;" src="http://images.ientrymail.com/tomld/www.ttra2008.com/images/l-back.gif" alt="left background"><img style="float:right;" src="http://images.ientrymail.com/tomld/www.ttra2008.com/images/r-back.gif" alt="left background"><div id="main"><div id="leftcol"><!-- Latest Featured Links --><p class="l-top"><img src="http://images.ientrymail.com/tomld/www.ttra2008.com/images/l-top.gif" alt="border-top"></p><div class="main"><div class="clear"></div></div><p class="l-bottom"><img src="http://images.ientrymail.com/tomld/www.ttra2008.com/images/l-bottom.gif" alt="border-bottom"></p><p class="l-top"><img src="http://images.ientrymail.com/tomld/www.ttra2008.com/images/l-top.gif" alt="border-top"></p><div class="main"><h3>Browse Directory</h3><div id="category"><table border="0" cellpadding="0" cellspacing="0" style="width:100%;"><tbody><tr>
+ <td valign="top" style="padding-left:5px;">
+<script>
+    $("#search-submit").submit(function(e){
+                e.preventDefault();
+                var qq = $('#qu').val();
+              window.location.href = '/sch' + '.html' + '?q=' + qq;
+              return FALSE;
+            });
+
+  </script>
+<b style="font-size: 16px;" class="mainarticle">Privacy Policy</b>
 
 <br><br>
 iEntry reserves the right to change this policy at any time by notifying users through a notice posted on iEntry.com or by email, of the existence of a new privacy policy or any updates. 
