--- a/a/ac/acc/accessexcellence.org.html
+++ b/a/ac/acc/accessexcellence.org.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the accessexcellence.org privacy policy that was archived on 2013-06-28.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130628073556id_/http%3A//accessexcellence.org/MTC/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the accessexcellence.org privacy policy that was archived on 2013-12-28.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131228103753id_/http%3A//www.accessexcellence.org/MTC/privacy.php) for the most accurate reproduction.-->
 
 <html><head>
 <title>Search Access Excellence</title></head><body text="#000000" link="#007D57" vlink="#7A7777" bgcolor="#FFFFFF" marginwidth="0" marginheight="0"><noindex><!-- Start Quantcast tag -->
