equipmentlocator.com (archived on 2013-12-28)
{
  "alexa_rank": 767660,
  "analysis_subcorpus": true,
  "categories": "business;shopping;vehicles",
  "char_count": 2686,
  "classifier_probability": 0.84,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 12.67,
  "homepage_snapshot_redirected_domain": "equipmentlocator.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20130907215219id_/http://www.equipmentlocator.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20130907215219id_/http%3A//equipmentlocator.com",
  "interval": "2013_B",
  "link_text": "Privacy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "equipmentlocator.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20131228133719id_/http%3A//www.equipmentlocator.com/privacy.htm",
  "policy_title": "Privacy Page ELS-Equipment Locator Service",
  "policy_url": "equipmentlocator.com/privacy.htm",
  "sha1": "fe731cfe21fed9413aab5863daf0e0e1d6c98d98",
  "simhash": 5804455719097160846,
  "simhash_updated": false,
  "site_hostname": "equipmentlocator.com",
  "site_url": "http://equipmentlocator.com",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20131228133719",
  "word_count": 423,
  "year": 2013
}

--- a/e/eq/equ/equipmentlocator.com.html
+++ b/e/eq/equ/equipmentlocator.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the equipmentlocator.com privacy policy that was archived on 2013-04-24.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130424014010id_/http%3A//www.equipmentlocator.com/privacy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the equipmentlocator.com privacy policy that was archived on 2013-12-28.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131228133719id_/http%3A//www.equipmentlocator.com/privacy.htm) for the most accurate reproduction.-->
 
 <html><head>
 <style>
@@ -144,10 +144,10 @@ function P7_Snap() { //v2.63 by PVII
 			<img src="/images-fp/spacer.gif" width="48" height="1"></td>
 	</tr>
 	<tr>
-		<td colspan="5" height="52" bgcolor="#000000">
+		<td colspan="5" height="52" bgcolor="#ffffff">
 			<img src="/images-fp/topbar-spacer.gif" onmouseover="P7_autoLayers(0)" width="449" height="52"></td>
 			
-		<td colspan="5" rowspan="4" bgcolor="#000000" align="center" valign="top" height="104">
+		<td colspan="5" rowspan="4" bgcolor="#ffffff" align="center" valign="top" height="104">
 		
 <img border="0" src="/images-fp/logo_noRot.gif" width="327" height="80">
 	
@@ -399,7 +399,7 @@ Mins = "0" + Mins;
 document.write('Todays Time: ' + Hours + ":" + Mins + Time + '');
 
 //-->
-</script>1/31/120 <br> Todays Time: 12:52 P.M.</p></td>
+</script>1/30/120 <br> Todays Time: 3:46 A.M.</p></td>
 						</tr>
 					</tbody></table>
 </td>
